crates/vize_canon/src/batch/virtual_project/snapshots/vize_canon__batch__virtual_project__jsx_codegen__tests__multiple_roots_and_static_style_diagnostics.snap
---
source: crates/vize_canon/src/batch/virtual_project/jsx_codegen_tests.rs
expression: generated.diagnostics
---
[]
