crates/vize_canon/src/batch/virtual_project/snapshots/vize_canon__batch__virtual_project__jsx_codegen__tests__multiple_roots_and_static_style_mappings.snap
---
source: crates/vize_canon/src/batch/virtual_project/jsx_codegen.rs
expression: "mapping_summary(source, &generated)"
---
[
    MappingSummary {
        generated: "const First = (props: { msg: string }) => ",
        source: "const First = (props: { msg: string }) => ",
        gen_range: 840..882,
        src_range: 0..42,
    },
    MappingSummary {
        generated: "props.msg",
        source: "props.msg",
        gen_range: 900..909,
        src_range: 52..61,
    },
    MappingSummary {
        generated: ";\nconst Second = () => (\n  ",
        source: ";\nconst Second = () => (\n  ",
        gen_range: 910..937,
        src_range: 72..99,
    },
    MappingSummary {
        generated: "\n);\n",
        source: "\n);\n",
        gen_range: 956..960,
        src_range: 182..186,
    },
]
