crates/vize_canon/src/batch/virtual_project/snapshots/vize_canon__batch__virtual_project__jsx_codegen__tests__typed_component_with_jsx_control_flow_directives_and_styles_diagnostics.snap
---
source: crates/vize_canon/src/batch/virtual_project/jsx_codegen.rs
expression: generated.diagnostics
---
[]
