crates/vize_canon/src/batch/virtual_project/snapshots/vize_canon__batch__virtual_project__jsx_codegen__tests__typed_component_with_jsx_control_flow_directives_and_styles_mappings.snap
---
source: crates/vize_canon/src/batch/virtual_project/jsx_codegen.rs
expression: "mapping_summary(source, &generated)"
---
[
    MappingSummary {
        generated: "import { computed, ref } from 'vue';\n\nconst Comp = (\n  { items, ok, tone, gap }: { items: Array<{ id: string; label: string }>; ok: boolean; tone: string; gap: number },\n  { emit, slots }: Ctx<{ select: [id: string] }, { footer: () => unknown }>,\n) => {\n  const selected = ref(items[0]?.id);\n  const activeItem = computed(() => items.find((item) => item.id === selected.value));\n  return (\n    ",
        source: "import { computed, ref } from 'vue';\n\nconst Comp = (\n  { items, ok, tone, gap }: { items: Array<{ id: string; label: string }>; ok: boolean; tone: string; gap: number },\n  { emit, slots }: Ctx<{ select: [id: string] }, { footer: () => unknown }>,\n) => {\n  const selected = ref(items[0]?.id);\n  const activeItem = computed(() => items.find((item) => item.id === selected.value));\n  return (\n    ",
        gen_range: 840..1234,
        src_range: 0..394,
    },
    MappingSummary {
        generated: "tone",
        source: "tone",
        gen_range: 1252..1256,
        src_range: 414..418,
    },
    MappingSummary {
        generated: "ok",
        source: "ok",
        gen_range: 1258..1260,
        src_range: 428..430,
    },
    MappingSummary {
        generated: "items",
        source: "items",
        gen_range: 1263..1268,
        src_range: 442..447,
    },
    MappingSummary {
        generated: "item",
        source: "item",
        gen_range: 1275..1279,
        src_range: 453..457,
    },
    MappingSummary {
        generated: "index",
        source: "index",
        gen_range: 1281..1286,
        src_range: 459..464,
    },
    MappingSummary {
        generated: "item.id",
        source: "item.id",
        gen_range: 1309..1316,
        src_range: 490..497,
    },
    MappingSummary {
        generated: "() => emit('select', item.id)",
        source: "() => emit('select', item.id)",
        gen_range: 1318..1347,
        src_range: 508..537,
    },
    MappingSummary {
        generated: "index",
        source: "index",
        gen_range: 1349..1354,
        src_range: 551..556,
    },
    MappingSummary {
        generated: "item.label",
        source: "item.label",
        gen_range: 1356..1366,
        src_range: 572..582,
    },
    MappingSummary {
        generated: "selected.value === item.id",
        source: "selected.value === item.id",
        gen_range: 1368..1394,
        src_range: 584..610,
    },
    MappingSummary {
        generated: "index",
        source: "index",
        gen_range: 1396..1401,
        src_range: 646..651,
    },
    MappingSummary {
        generated: "selected.value",
        source: "selected.value",
        gen_range: 1406..1420,
        src_range: 721..735,
    },
    MappingSummary {
        generated: "tone",
        source: "tone",
        gen_range: 1440..1444,
        src_range: 751..755,
    },
    MappingSummary {
        generated: "activeItem.value?.label",
        source: "activeItem.value?.label",
        gen_range: 1446..1469,
        src_range: 775..798,
    },
    MappingSummary {
        generated: "slots.footer()",
        source: "slots.footer()",
        gen_range: 1471..1485,
        src_range: 800..814,
    },
    MappingSummary {
        generated: "gap",
        source: "gap",
        gen_range: 1487..1490,
        src_range: 861..864,
    },
    MappingSummary {
        generated: "\n  );\n};\n",
        source: "\n  );\n};\n",
        gen_range: 1491..1500,
        src_range: 888..897,
    },
]
